--- a/app/templates/plants/add.html
+++ b/app/templates/plants/add.html
@@ -30,6 +30,7 @@
         name="name"
         class="input"
         required
+        aria-required="true"
         placeholder="e.g., Snake Plant, Monstera"
         maxlength="100"
         aria-describedby="name-help"
