--- a/app/templates/plants/view.html
+++ b/app/templates/plants/view.html
@@ -263,7 +263,7 @@
     method="POST"
     action="{{ url_for('plants.delete', plant_id=plant.id) }}"
     class="inline-block"
-    onsubmit="return confirm('Are you sure you want to delete {{ plant.name }}? This cannot be undone.');"
+    data-confirm="Are you sure you want to delete {{ plant.name }}? This cannot be undone."
   >
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
     <button type="submit" class="btn btn-danger">
